Add OR web query operator